src/gc-arena/tests/ui/require_static_enum_variant.stderr
error: `#[collect]` is not suppported on enum variants
 --> $DIR/require_static_enum_variant.rs:6:15
  |
6 |     #[collect(require_static)]
  |               ^^^^^^^^^^^^^^
